equal spacing fix

--- a/packages/torque/src/styles/components/asset-selector.scss
+++ b/packages/torque/src/styles/components/asset-selector.scss
@@ -44,7 +44,7 @@
     height: 205px;
     width: 195px;
     margin: 0 1rem;
-    padding: 2rem;
+    padding: 25px;
 
     border-radius: 1rem;
     background-color: $color-borrow-card;
